<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_nav_dashboard"
        android:title="@string/menu_dashboard"
        android:icon="@drawable/ic_baseline_dashboard_24_black"
        app:cnb_iconColor="@color/menu_background_selected_icon_text_color"
        app:cnb_backgroundColor="@color/menu_background_color"
        />
    <item
        android:id="@+id/bottom_nav_setting"
        android:title="@string/menu_setting"
        android:icon="@drawable/ic_baseline_settings_24_black"
        app:cnb_iconColor="@color/menu_background_selected_icon_text_color"
        app:cnb_backgroundColor="@color/menu_background_color"
        />
    <item
        android:id="@+id/bottom_nav_account"
        android:title="@string/menu_account"
        android:icon="@drawable/ic_baseline_account_circle_24_black"
        app:cnb_iconColor="@color/menu_background_selected_icon_text_color"
        app:cnb_backgroundColor="@color/menu_background_color"
        />

</menu>