<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/linearSubscription"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:elevation="7dp"
    android:background="@drawable/style_subscription_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/subscription_btn_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:drawableLeft="@drawable/ic_baseline_keyboard_backspace_24_black"
            android:paddingLeft="4dp"
            android:elevation="7dp"
            android:layout_gravity="start"
            android:background="@drawable/style_btn_subscription"/>

        <TextView
            android:id="@+id/subscription_title"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="24sp"
            android:textColor="@color/color_subscription_title"
            android:text="@string/subscription_title"
            android:textStyle="bold" />

             <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/subscription_img"
                android:src="@drawable/ic_baseline_subscriptions_24_white"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/subscription_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscription_description"
                android:textColor="@color/color_subscription_description"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/subscription_btn_checkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscription_checkout"
            android:background="@drawable/style_btn_subscription"
            android:layout_marginTop="20dp"
            android:layout_weight="20"
            android:textColor="@color/color_subscription_btn_text"
            android:textAllCaps="true"
            android:textSize="24sp"/>

    </LinearLayout>

</LinearLayout>